rendered/envs/demo/oncall/deployment-oncall-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/component: celery
    app.kubernetes.io/instance: oncall
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: oncall
    app.kubernetes.io/version: v1.15.0
    helm.sh/chart: oncall-1.15.0
  name: oncall-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: celery
      app.kubernetes.io/instance: oncall
      app.kubernetes.io/name: oncall
  template:
    metadata:
      labels:
        app.kubernetes.io/component: celery
        app.kubernetes.io/instance: oncall
        app.kubernetes.io/name: oncall
    spec:
      containers:
        - command:
            - ./celery_with_exporter.sh
          image: grafana/oncall:v1.15.0
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - celery -A engine inspect ping -d celery@$HOSTNAME
            initialDelaySeconds: 30
            periodSeconds: 300
            timeoutSeconds: 10
          name: oncall
          resources: {}
          securityContext: {}
      securityContext: {}
      serviceAccountName: oncall
