rendered/envs/demo/oncall/service-oncall-engine.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/component: engine
    app.kubernetes.io/instance: oncall
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: oncall
    app.kubernetes.io/version: v1.14.0
    helm.sh/chart: oncall-1.14.0
  name: oncall-engine
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: engine
    app.kubernetes.io/instance: oncall
    app.kubernetes.io/name: oncall
  type: ClusterIP
