rendered/envs/demo/oncall/service-oncall-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: oncall
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 11.1.4
    helm.sh/chart: grafana-8.4.6
  name: oncall-grafana
  namespace: oncall
spec:
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: oncall
    app.kubernetes.io/name: grafana
  type: ClusterIP
